--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://93641251-8069-4475-8351-bae4f17bad72.preview.emergentagent.com
 WDS_SOCKET_PORT=443
