Initial commit: pushed working mock interview app

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://93641251-8069-4475-8351-bae4f17bad72.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://localhost:8001
+WDS_SOCKET_PORT=3001
